Cleanup OpaqueLoop*Node verification code for Assertion Predicates

XMLWordPrintable

    • b26

      Currently, we are using PhaseIdealLoop::assertion_predicate_has_loop_opaque_node() throughout our code base. There are some places where the verification code is missed to call, called twice or called unnecessarily. Moreover, we should move the verification code closer to the actual Assertion Predicate code. This should be the goal of this RFE.

            Assignee:
            Christian Hagedorn
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: