8344213: Cleanup OpaqueLoop*Node verification code for Assertion Predicates